--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>fizz-all</module>
         <module>fizz-loadbalance</module>
         <module>fizz-cache</module>
+        <module>fizz-lock</module>
     </modules>
 
     <properties>
